<resources>
    <string name="app_name">DPI WareHouse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_inventory_fragment">New Inventory Fragment</string>
    <string name="inventory_fragment">Inventory Fragment</string>
    <string name="warehouse">WareHouse</string>
    <string name="inventory">Inventory</string>
    <string name="supplier">Supplier</string>
    <string name="_2021_copyright_dpi_warehouse_network">© 2021 Copyright DPI Warehouse Network</string>
    <string name="settings">Settings</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="inventory_serial">Enter Serial Number</string>
    <string name="stock_owner">Stock Owner</string>
    <string name="stock_date">Stock Date</string>
    <string name="btnAddToStock">Add to Stock</string>
    <string name="txtWarehouseLocation">Warehouse Location</string>
    <string name="txtInsideStock">Inside Stock</string>
    <string name="txtnewstocktitle">Add New Items</string>
    <string name="txtprice">Price</string>
    <string name="txtquantity">Quantity</string>
    <string name="btnRetEdit">Edit</string>
    <string name="btnRetRemove">Remove</string>
    <string name="tvUpdateDetails">Update Details</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="location_access_permissions">location_access_permissions</string>
    <string name="logout">LOGOUT</string>
    <string name="disable_account">Disble Account</string>
    <string name="main_functions">Main Functions</string>
    <string name="reset_password">Reset Password </string>
    <string name="add_user">Add User</string>
    <string name="users">Users </string>
    <string name="groups">Groups</string>
    <string name="quick_actions">Quick Action</string>

</resources>