<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/tvUpdateDetails"
        android:background="#0faad1"
        android:textSize="25dp"
        android:gravity="center"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txtprice"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:layout_gravity="center"
        android:id="@+id/txtPrice"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txtWarehouseLocation"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:layout_gravity="center"
        android:id="@+id/txtWarehouseLocation"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/stock_owner"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:layout_gravity="center"
        android:id="@+id/txtStockOwner"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvUpdateDetails"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:textSize="21dp"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/btnUpdate"/>



</LinearLayout>