<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:elevation="6dp"
    app:cardUseCompatPadding="true"
    android:fillViewport="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imgStableImage"
            android:layout_width="77dp"
            android:layout_height="59dp"

            android:src="@drawable/w" />

        <TextView
            android:id="@+id/teStockOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imgStableImage"
            android:text="@string/stock_owner"
            android:textColor="@color/txtViewColore"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/teWarehouseLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teStockOwner"
            android:layout_toRightOf="@+id/imgStableImage"
            android:text="@string/txtWarehouseLocation"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_below="@id/teWarehouseLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnStockEdit"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:text="@string/btnRetEdit"
                android:textAllCaps="false"
                android:background="@drawable/rounded"
                android:textColor="#FFFF"
                tools:ignore="TextContrastCheck" />

            <Button
                android:background="@drawable/rounded"
                android:id="@+id/btnStockRemove"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/btnRetRemove"
                android:textAllCaps="false"
                android:textColor="#FFFF"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>