<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/Q_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_actions"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="446dp"
        android:layout_height="9dp"
        app:cardBackgroundColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077">

        <androidx.cardview.widget.CardView
            android:id="@+id/q_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Q_actions"
            app:layout_constraintVertical_bias="0.019"
            tools:layout_conversion_absoluteHeight="9dp"
            tools:layout_conversion_absoluteWidth="421dp"
            tools:layout_editor_absoluteX="-8dp"
            tools:layout_editor_absoluteY="44dp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnAddUser"
        android:layout_width="72dp"
        android:layout_height="45dp"
        android:backgroundTint="#5E35B1"
        android:onClick="onClick"
        android:text="@string/add_user"
        android:textColor="@color/black"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="OnClick,SmallSp,TouchTargetSizeCheck,UsingOnClickInXml" />

    <Button
        android:id="@+id/rPwd"
        android:layout_width="94dp"
        android:layout_height="45dp"
        android:backgroundTint="#43A047"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129"
        tools:ignore="SmallSp,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnLogoutSetting"
        android:layout_width="117dp"
        android:layout_height="34dp"
        android:baselineAligned="false"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <Button
        android:id="@+id/dAccount"
        android:layout_width="94dp"
        android:layout_height="45dp"
        android:backgroundTint="#E53935"
        android:text="@string/disable_account"
        android:textColor="@color/black"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/framefunction"
        android:layout_width="427dp"
        android:layout_height="39dp"
        android:background="@color/cardview_dark_background"
        android:outlineAmbientShadowColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251">

        <TextView
            android:id="@+id/functions"
            android:layout_width="296dp"
            android:layout_height="25dp"
            android:text="@string/main_functions"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.122"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <Button
        android:id="@+id/users"
        android:layout_width="307dp"
        android:layout_height="38dp"
        android:text="@string/users"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <Button
        android:id="@+id/groups"
        android:layout_width="307dp"
        android:layout_height="38dp"
        android:text="@string/groups"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

    <Button
        android:id="@+id/location"
        android:layout_width="307dp"
        android:layout_height="38dp"
        android:textColor="@color/white"
        android:text="@string/location_access_permissions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="464dp"
        android:layout_height="284dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993"
        app:srcCompat="@drawable/splash"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>